--- a/src/app.html
+++ b/src/app.html
@@ -7,8 +7,6 @@
 		%sveltekit.head%
 	</head>
 	<body data-sveltekit-preload-data="hover">
-		<div style="display: contents" class="select-none relative min-h-[100dvh]">
-			%sveltekit.body%
-		</div>
+		<div style="display: contents" class="select-none relative min-h-[100vh]">%sveltekit.body%</div>
 	</body>
 </html>
